--- a/trendyol-group/config-server/src/main/resources/service-config/shopping-cart-service.yml
+++ b/trendyol-group/config-server/src/main/resources/service-config/shopping-cart-service.yml
@@ -5,9 +5,9 @@ spring:
   application:
     name: shopping-cart-service
   datasource:
-    url: jdbc:postgresql://localhost:5432/shopping-cart
+    url: jdbc:postgresql://****/shopping-cart
     username: postgres
-    password: Taha1919gokce!
+    password: 000***
     driver-class-name: org.postgresql.Driver
   jpa:
     show-sql: true
